dark mode button just fixed

--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@
 
 .mode-text {
   color: #4731d3;
-  width: 103px;
+  width: 140px;
   height: 18px;
   font-weight: 700;
 }
